# python-industrial-journey

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  venv terminal.lnk
.github/workflows/: ci.yaml
src/: __init__.py  day1_basics.py  day2_conditions.py  day3_task4_temp.py  day4_task5_status.py  day5_task6_sensor.py
tests/: test_sanity.py
