[project]
name = "python-industrial-journey"
version = "0.1.0"
description = "Journey to industrial-grade Python"
readme = "README.md"
requires-python = ">=3.12"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E","F","I","UP","B","N","W","C90","RUF"]
ignore = ["E203"]  # совместимость с black

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=src --cov-report=term-missing"
